now cycling through object detections

--- a/src/ImageReviewer/ImageReviewer/appsettings.json
+++ b/src/ImageReviewer/ImageReviewer/appsettings.json
@@ -1,10 +1,6 @@
 {
-  "DataFolder": {
-    "train": "../data/train",
-    "val": "../data/val",
-    "yaml": "../data/data.yaml"
-  },
-
+  "YoloYaml": "../data/data.yaml",
+  "OutputFolder": "Output",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
