wip - adding tests, form will not load

--- a/src/ImageReviewer/ImageReviewer/ImageReviewerApp.csproj
+++ b/src/ImageReviewer/ImageReviewer/ImageReviewerApp.csproj
@@ -10,11 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-    <PackageReference Include="YamlDotNet" Version="15.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ImageReviewer.Library\ImageReviewer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
