--- a/src/ImageReviewer/ImageReviewer/appsettings.json
+++ b/src/ImageReviewer/ImageReviewer/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "YoloYaml": "../data/data.yaml",
+  "YoloYamlFile": "../data/data.yaml",
   "OutputFolder": "Output",
   "Logging": {
     "LogLevel": {
