--- a/src/ImageReviewer/ImageReviewer.Tests/ImageReviewer.Tests.csproj
+++ b/src/ImageReviewer/ImageReviewer.Tests/ImageReviewer.Tests.csproj
@@ -31,4 +31,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="yolo-testfile.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
